chore: drop unused imports and tidy formatting across the tree
Project-wide IDE cleanup, kept apart from the correctness work on this branch
so neither obscures the other:

- unused imports removed across the module tree, including the committed ANTLR
  sources (ANTLR re-emits those on the next grammar regeneration, so that part
  will reappear as a diff)
- trailing whitespace removed from the generated parsers and from three API
  descriptor text blocks
- three lambdas replaced by method references in EntityIoStatisticsFunctionalTest
- redundant `readOnly = true` dropped from the BIDI_REWRITE data set, true being
  the default

Ref: #1547